# Triathlon

./: .gitignore  README.md  convert_gpx2gpkg.py  pyproject.toml
notebooks/: explicacao_inicial.ipynb
triatlhon/: pyproject.toml
